syntax = "proto3";
package agent;

message TestMethodRequest {
  string file_name = 1;
}

message TestMethodResponse {
  string status = 1;
  string response = 2;
  string error_message = 3;
}

service TestAgent {
  rpc TestMethod (TestMethodRequest) returns (TestMethodResponse);
}